--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "immense-earth-15974" #Must be unique in Heroku
           heroku_email: "daneedw@gmail.com"
+      -run: |
+          git remote add heroku git@heroku.com:<HEROKU_APP_NAME>.git
+          git push heroku master
